--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@ionic/react": "^8.4.1",
     "@react-google-maps/api": "^2.20.3",
     "aos": "^2.3.4",
+    "ionicons": "^7.4.0",
     "next": "15.0.3",
     "nodemailer": "^6.9.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fontawesome": "^1.7.1",
     "react-icons": "^5.4.0",
+    "react-ion-icon": "^4.0.0",
     "swiper": "^11.1.15",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
